post-editing-serilog

--- a/MVCBlogApp/appsettings.Development.json
+++ b/MVCBlogApp/appsettings.Development.json
@@ -4,5 +4,23 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Serilog": {
+    "Using": ["Serilog.Sinks.Console","Serilog.Sinks.File"],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/BlogLogs.txt",
+          "rollingInterval" : "Day"
+        }
+      }
+    ]
   }
-}
+        
+  
+  }
