--- a/MVCBlogApp/MVCBlogApp.csproj
+++ b/MVCBlogApp/MVCBlogApp.csproj
@@ -8,6 +8,9 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.9" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.21" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.21" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.21" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.21" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.21">
