dynamic-owner-data

--- a/MVCBlogApp/appsettings.json
+++ b/MVCBlogApp/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BlogSettings": {
+    "AuthorNameAndSurname": "Kornel Pustelak",
+    "AuthorImage" : "uploads/profile.png",
+    "AuthorGithub": "https://github.com/kpustelak",
+    "AuthorLinkedin": "https://www.linkedin.com/in/kornel-pustelak-274205284/"
+  }
 }
