--- a/MVCBlogApp/appsettings.Development.json
+++ b/MVCBlogApp/appsettings.Development.json
@@ -1,13 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=postgres;Database=blog;Username=blog;Password=blog"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning"
     }
   },
   "Serilog": {
-    "Using": ["Serilog.Sinks.Console","Serilog.Sinks.File"],
-    "MinimumLevel": "Information",
+    "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
+    "MinimumLevel": "Warning",
     "WriteTo": [
       {
         "Name": "Console"
@@ -16,11 +19,9 @@
         "Name": "File",
         "Args": {
           "path": "Logs/BlogLogs.txt",
-          "rollingInterval" : "Day"
+          "rollingInterval": "Day"
         }
       }
     ]
   }
-        
-  
-  }
+}
