--- a/MVCBlogApp/appsettings.json
+++ b/MVCBlogApp/appsettings.json
@@ -1,14 +1,33 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=blog.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/BlogLogs.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*",
   "BlogSettings": {
     "AuthorNameAndSurname": "Kornel Pustelak",
-    "AuthorImage" : "uploads/profile.png",
+    "AuthorImage": "uploads/profile.png",
     "AuthorGithub": "https://github.com/kpustelak",
     "AuthorLinkedin": "https://www.linkedin.com/in/kornel-pustelak-274205284/"
   }
