--- a/MVCBlogApp/appsettings.Development.json
+++ b/MVCBlogApp/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Database=blog;Username=blog;Password=blog"
+    "DefaultConnection": "Host=localhost;Database=blog;Username=postgres;Password=root"
   },
   "Logging": {
     "LogLevel": {
@@ -23,5 +23,9 @@
         }
       }
     ]
+  },
+  "AdminUser": {
+    "Email": "admin@blog.pl",
+    "Password": "BardzoSilneHaslo123!@#LongerThan20"
   }
 }
