--- a/MVCBlogApp/appsettings.json
+++ b/MVCBlogApp/appsettings.json
@@ -30,5 +30,9 @@
     "AuthorImage": "uploads/profile.png",
     "AuthorGithub": "https://github.com/kpustelak",
     "AuthorLinkedin": "https://www.linkedin.com/in/kornel-pustelak-274205284/"
+  },
+  "AdminUser": {
+    "Email": "admin@blog.pl",
+    "Password": "BardzoSilneHaslo123!@#LongerThan20"
   }
 }
